# resume

./: .buildinfo  .gitignore  Brewfile  LICENSE  Makefile  README.html  README.md  README.rst  build_pdf.sh  conf.py  genindex.html  index.html  index.rst  objects.inv  pdf.css  pyproject.toml  requirements.txt  resume.md  search.html  searchindex.js  style.css  template.html
_sources/: README.txt  index.rst.txt  index.txt
_static/: bootstrap-sphinx.css  my.css  my.js
_static/bootswatch-3.2.0/solarized/: bootstrap.min.css
_templates/: layout.html
html/: index.html  search.html  searchindex.js
html/_sources/: README.txt
html/env/src/sphinx-bootstrap-theme/: HISTORY.html  README.html  TODO.html
html/env/src/sphinx-bootstrap-theme/demo/source/: HISTORY.html  README.html  TODO.html  downloads.html  examples.html  index.html  sidebar.html
html/env/src/sphinx-bootstrap-theme/demo/source/subdir/: index.html
