[tool.poetry]
name = "resume"
version = "1.0"
description = ""
authors = ["Clayton Parker <me@claytron.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.2.0"
sphinx-bootstrap-theme = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
